# BetStarter

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start.sh
app/: config.py  main.py
app/db/: init_db.py  session.py
app/models/: entities.py
app/services/: api_football.py  auth.py  backtester.py  collector.py  pipeline.py  recommender.py  telegram.py  worldcup_model.py
dashboard/: app.py  dashboard.py
dashboard/pages/: admin.py  analise.py  audit.py  backtest.py  history.py  home.py  modelo.py  palpites.py  recommendations.py  telegram.py
scripts/: backtest.py  build_historical_stats.py  create_admin.py  debug_fixtures.py  debug_odds.py  fetch_fixtures.py  fetch_odds.py  generate_recommendations.py  historical_model_backtest.py  historical_worldcup_backtest.py  import_worldcup_history.py  init_db.py  pipeline.py  reset_password.py  seed_ratings.py  teste_api.py
